fixed dark mode slider button

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 html{
   overflow-x: hidden;
-  margin-left: 20px;
 }
 .App {
   text-align: center;
